ver 0.19.11 (not yet released)
* tags
  - ape: fix buffer overflow
* decoder
  - ffmpeg: fix crash due to wrong avio_alloc_context() call
* encoder
  - flac: fix crash with 32 bit playback

ver 0.19.10 (2015/06/21)
* input
  - curl: fix deadlock on small responses
  - smbclient: fix DFF playback
* decoder
  - ffmpeg: improve seeking accuracy
  - fix stuck stream tags
* encoder
  - opus: fix bogus granulepos
* output
  - fix failure to open device right after booting
* neighbor
  - nfs: fix deadlock when connecting
* fix "single" mode breakage due to queue edits

ver 0.19.9 (2015/02/06)
* decoder
  - dsdiff, dsf: raise ID3 tag limit to 1 MB
* playlist: fix loading duplicate tag types from state file
* despotify: remove defunct plugin
* fix clock integer overflow on OS X
* fix gcc 5.0 warnings
* fix build failure with uClibc
* fix build failure on non-POSIX operating systems
* fix dependency issue on parallel Android build
* fix database/state file saving on Windows

ver 0.19.8 (2015/01/14)
* input
  - curl: fix bug after rewinding from end-of-file
  - mms: reduce delay at the beginning of playback
* decoder
  - dsdiff, dsf: allow ID3 tags larger than 4 kB
  - ffmpeg: support interleaved floating point
* fix clang 3.6 warnings
* fix build failure on NetBSD

ver 0.19.7 (2014/12/17)
* input
  - nfs: fix crash while canceling a failing file open operation
  - nfs: fix memory leak on connection failure
  - nfs: fix reconnect after mount failure
  - nfs: implement mount timeout (60 seconds)
* storage
  - nfs: implement I/O timeout (60 seconds)
* playlist
  - embcue: fix filename suffix detection
  - don't skip non-existent songs in "listplaylist"
* decoder
  - ffmpeg: fix time stamp underflow
* fix memory allocator bug on Windows

ver 0.19.6 (2014/12/08)
* decoder
  - ffmpeg: support FFmpeg 2.5
* fix build failure with musl
* android
  - update libFLAC to 1.3.1
  - update FFmpeg to 2.5

ver 0.19.5 (2014/11/26)
* input
  - nfs: fix crash on connection failure
* archive